syntax = "proto2";

package tenant;

import "v1/tenant/tenant.proto";

message TenantCreatedV1 {
  required TenantV1 tenant = 1;
}

message TenantUpdatedV1 {
  required TenantV1 tenant = 1;
}

message TenantDeletedV1 {
  required string tenantId = 1;
}
